2013-03-06  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/aggr6.ads: New test.

2013-03-06  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/loop_optimization15.ad[sb]: New test.

2013-03-06  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/56548
	* gcc.dg/pr56548.c: New test.

2013-03-06  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR debug/53363
	* g++.dg/debug/dwarf2/thunk1.C: Skip on darwin.

2013-03-06  Jakub Jelinek  <jakub@redhat.com>

	PR c++/56543
	* g++.dg/template/typename20.C: New test.

2013-03-05  Jakub Jelinek  <jakub@redhat.com>

	PR debug/56510
	* gcc.dg/pr56510.c: New test.

	PR rtl-optimization/56484
	* gcc.c-torture/compile/pr56484.c: New test.

2013-03-05  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/56530
	* g++.dg/warn/Wsign-conversion-2.C: New.

2013-03-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/56270
	* gcc.dg/vect/slp-38.c: New testcase.

2013-03-05  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/56494
	* gcc.dg/pr56494.c: New test.

2013-01-04  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/pr56424.c: New test.

2013-03-04  Georg-Johann Lay  <avr@gjlay.de>

	* gcc.dg/pr55153.c: Add dg-require-effective-target scheduling.
	* gcc.dg/pr56228.c <avr>: Skip.

2013-03-04  Georg-Johann Lay  <avr@gjlay.de>

	PR testsuite/52641
	PR tree-optimization/52631
	* gcc.dg/tree-ssa/pr52631.c: Fix 16-bit int.

2013-03-03  David Edelsohn  <dje.gcc@gmail.com>

	* gcc.dg/vect/vect-82_64.c: Skip on AIX.
	* gcc.dg/vect/vect-83_64.c: Same.

2013-03-03  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/56477
	* gfortran.dg/pointer_check_13.f90: New test.

2013-03-03  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/54730
	* gfortran.dg/array_constructor_42.f90: New test.

2013-03-02  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/52688
	* g++.dg/template/static33.C: New.
	* g++.dg/template/static34.C: Likewise.

	PR c++/10291
	* g++.dg/template/static35.C: New.

2013-03-01  Steve Ellcey  <sellcey@mips.com>
