@@ -1,3 +1,11 @@
+2013-03-06  Kai Tietz  <ktietz@redhat.com>
+
+	* gcc.dg/lto/20090914-2_0.c: Skip for mingw and cygwin
+	targets.
+	* gcc.dg/lto/20091013-1_1.c: Set x64-mingw as xfail.
+	* gcc.dg/lto/20091013-1_2.c: Likewise.
+	* gcc.dg/pr31490.c: Adjust for LLP64 targets.
+
 2013-03-06  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/specs/aggr6.ads: New test.
